--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
                                     required>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-entrar">Entrar</button>
+                                <button type="submit" class="btn btn-entrar"><a href="./welcome/welcome1.html">Entrar</a></button>
                             </div>
                         </form>
                     </section><!-- End Login Section -->
