--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                     <!-- ======= Login Section ======= -->
                     <section id="login">
                         <h2 class="py-5">LOGIN</h2>
-                        <form action="">
+                        <form action="/welcome/welcome1.html">
                             <div class="mb-4">
                                 <label for="code" class="form-label">Código Universitario</label>
                                 <input type="number" class="form-control" name="code" minlength="8" maxlength="10"
@@ -60,7 +60,7 @@
                                     required>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-entrar"><a href="./welcome/welcome1.html">Entrar</a></button>
+                                <button type="submit" class="btn btn-entrar">Entrar</button>
                             </div>
                         </form>
                     </section><!-- End Login Section -->
