--- a/welcome/welcome3.html
+++ b/welcome/welcome3.html
@@ -48,7 +48,7 @@
         <div class="col d-none d-lg-block col-md-4 col-lg-4 col-xl-4 text-center">
           <!-- ======= Image Section ======= -->
           <section id="image">
-            <img src="../assets/img/welcome/welcome01-img.png" alt="" width="350">
+            <img src="../assets/img/welcome/welcome03-img.png" alt="" width="350">
           </section><!-- End Image Section -->
         </div>
 
@@ -68,13 +68,9 @@
         </div>
       </div>
     </div>
-    <div class="row fixed-bottom">
-      <section id="buttonNext" class="d-flex flex-row-reverse">
-        <div class="contenedor">         
-          <a  href="../welcome/welcome2.html">
-            <img src="../assets/img/welcome/buttonNext1.png" alt="" width="100">
-          </a> 
-          
+    <div class="row text-center m-5">
+      <section>
+          <a href="../content/home.html" class="btn btn-primary buttonEmpezar">Empezar</a>        
       </section>
     </div>
     </div>
