--- a/login.html
+++ b/login.html
@@ -39,8 +39,7 @@
 
                 <div class="col conecta d-none d-lg-block col-md-7 col-lg-7 col-xl-7 text-center">
                     <!-- ======= Conecta Section ======= -->
-                    <section id="conecta">
-                        <p class="p-1"></p>
+                    <section id="conecta" class="p-3">
                         <img src="./assets/img/login/login-img.png" alt="" class="p-4">
                         <h2>CONECTA</h2>
                     </section><!-- End Conecta Section -->
